--- a/api-gateway-server/src/main/resources/application-dev.yml
+++ b/api-gateway-server/src/main/resources/application-dev.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: api-gateway
   profiles:
-    active: prod
+    active: dev
   config:
     import: optional:configserver:http://localhost:8888
   cloud:
